# autovideo-ai

./: .env  LICENSE  README.md  config.py  logger.py  pyproject.toml  requirements.txt
audio/: transcription.py  tts.py
scripts/: generate_video.py
utils/: file_ops.py
video/: davinci.py  editor.py
workflow/: auto_pipeline.py  script_parser.py
